# Masterarbeit

./: .gitignore  README.md
DMP_Python/: DMP.py  DMP_Keypoints.py  DMP_standard.py  Load_Save_Data.py  Model_Training.py  Obstacle_avoid.py  Skill_Model_Optimizer.py  Training_Traj_Preprocessor.py  Trajectory_Generator.py  config_param1.yaml  kalman_filter.py  plot_function.py  plot_result3D.py  variance_calculation.py
DMP_Python/data/3D_data/benchmark/: 2m_highSpeed_copy.txt  2m_lowSpeed_openpose.txt
DMP_Python/data/3D_data/benchmark/raw/: 2m_lowSpeed_openpose.txt  2m_lowSpeed_sensor.txt
DMP_Python/data/3D_data/movement1/: data3.txt  data4.txt  data6.txt
DMP_Python/data/3D_data/movement2/: data21.txt  data211.txt  data22.txt  data31.txt  data311.txt  data32.txt  data321.txt  data33.txt  data4.txt  data41.txt  data411.txt  data42.txt  data421.txt  data43.txt  data5.txt
DMP_Python/data/3D_data/movement2/raw/: data21.txt  data22.txt  data33.txt
DMP_Python/trajectory_gen/: traj_gen_01.txt  traj_gen_21.txt  traj_gen_22.txt  traj_gen_3.txt  traj_gen_S.txt
OpenPose_ZED/: CMakeLists.txt
OpenPose_ZED/include/: openpose.h
OpenPose_ZED/src/: main.cpp  openpose.cpp
learn_from_demo/: CMakeLists.txt  package.xml  readme.txt
learn_from_demo/data/3D_data/: Wrist_position3d2.txt  Wrist_position3d3.txt  Wrist_position3d4.txt
learn_from_demo/data/3D_data/movement1/: data1.txt  data2.txt  data5.txt
learn_from_demo/data/3D_data/movement2/: data1.txt  data2.txt  data3.txt
learn_from_demo/dokuments/: msg_contoller.txt
learn_from_demo/launch/: control_ur10.launch  dmp_ur10.launch
learn_from_demo/scripts/dmp/: DMP.py  Load_Save_Data.py  Obstacle_avoid.py  config_param1.yaml  init_GMM_timeBased.py  main.py  plot_result3D.py  read_write.py  robot_imitate.py  waypoint_calculator.py
learn_from_demo/scripts/ur10/: joint_states_listener.py  universal_robot_kinematics.py  ur10_control.py
learn_from_demo/src/: inverse_kinematic.cpp
learn_from_demo/trajectory_gen/: traj_gen_S.txt
